--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^11.11.3"
   },
   "dependencies": {
-    "ftp": "^0.3.10"
+    "ftp": "^0.3.10",
+    "node-ical": "^0.9.2"
   }
 }
