--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "url": "https://github.com/gsongsong/3gpp/issues"
   },
   "homepage": "https://github.com/gsongsong/3gpp#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "tslint --project ."
+    }
+  },
   "devDependencies": {
     "@types/ftp": "^0.3.29",
-    "@types/node": "^11.11.3"
+    "@types/node": "^11.11.3",
+    "husky": "^1.3.1"
   },
   "dependencies": {
     "ftp": "^0.3.10",
