--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   "homepage": "https://github.com/gsongsong/3gpp#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "tslint --project ."
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.ts": "tslint"
   },
   "devDependencies": {
     "@types/ftp": "^0.3.29",
     "@types/node": "^11.11.3",
-    "husky": "^1.3.1"
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5"
   },
   "dependencies": {
     "ftp": "^0.3.10",
