--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "*.ts": "tslint"
   },
   "devDependencies": {
+    "@types/antlr4": "^4.7.0",
     "@types/ftp": "^0.3.29",
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5"
   },
   "dependencies": {
+    "antlr4": "^4.7.2",
     "ftp": "^0.3.10",
     "node-ical": "^0.9.2"
   }
