--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "antlr": "antlr4 src/asn1/ASN.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,12 +26,14 @@
     "*.ts,!*.d.ts": "tslint"
   },
   "devDependencies": {
+    "@types/antlr4": "^4.7.0",
     "@types/ftp": "^0.3.29",
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5"
   },
   "dependencies": {
+    "antlr4": "^4.7.2",
     "ftp": "^0.3.10",
     "node-ical": "^0.9.2"
   }
