--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     }
   },
   "lint-staged": {
-    "*.ts,!*.d.ts": "tslint"
+    "src/**/*.ts": "tslint"
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.0",
+    "@types/cheerio": "^0.22.11",
     "@types/ftp": "^0.3.29",
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "antlr4": "^4.7.2",
+    "cheerio": "^1.0.0-rc.2",
     "ftp": "^0.3.10",
     "node-ical": "^0.9.2"
   }
