--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@types/ftp": "^0.3.29",
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "lint-staged": "^8.1.5",
+    "typedoc": "^0.14.2"
   },
   "dependencies": {
     "antlr4": "^4.7.2",
