Fix npm typedoc script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "antlr": "antlr4 src/asn1/ASN.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typedoc": "typedoc --out docs src --module commonjs --ignoreCompilerErrors --excludeNotExported --exclude **/index.ts --readme none"
+    "typedoc": "typedoc --out docs src --module commonjs --excludeNotExported --exclude **/index.ts --readme none"
   },
   "repository": {
     "type": "git",
