--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "antlr": "antlr4 src/asn1/ASN.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typedoc": "typedoc --out docs src --module commonjs --excludeNotExported --exclude **/index.ts --readme none"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
