--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "typedoc": "^0.14.2"
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-nojekyll": "^1.0.1"
   },
   "dependencies": {
     "antlr4": "^4.7.2",
