--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/antlr4": "^4.7.0",
     "@types/cheerio": "^0.22.11",
     "@types/ftp": "^0.3.29",
+    "@types/loglevel": "^1.5.4",
     "@types/node": "^11.11.3",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
@@ -40,6 +41,7 @@
     "cheerio": "^1.0.0-rc.2",
     "excel4node": "^1.7.1",
     "ftp": "^0.3.10",
+    "loglevel": "^1.6.1",
     "node-ical": "^0.9.2"
   }
 }
