Temporary test script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "antlr": "antlr4 src/asn1/ASN.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && node dist/asn1/parse 36331-f40.asn1 > log 2>&1"
   },
   "repository": {
     "type": "git",
