--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/ftp": "^0.3.29",
     "@types/loglevel": "^1.5.4",
     "@types/node": "^11.11.3",
+    "@types/yargs": "^13.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "typedoc": "^0.14.2",
@@ -41,6 +42,7 @@
     "excel4node": "^1.7.1",
     "ftp": "^0.3.10",
     "loglevel": "^1.6.1",
-    "node-ical": "^0.9.2"
+    "node-ical": "^0.9.2",
+    "yargs": "^13.2.2"
   }
 }
