Feature/asn 3gpp (#31)
* Add script to download ASN_3gpp.g4 from GitHub

* Update npm antlr script and parser.ts

* Update npm script

* Reflect ASN_3gpp to compiled parser.js

* Reflect updated logging package

* Add TagVisitor

* Update ComponentTypeListVisitor for Tag

* Update ExtensionAdditionGroupVisitor for Tag

* Update ComponentTypeListsVisitor for Tag

* Workaround tag grammar bug

* Update sequence.toString() to reflect tag

* Add ANTLR Lexer for JAVA to JavaScript converter

* Update extensionAdditionGroup.toString() to reflect tag

* Update NamedType.fillWorksheet() to reflect tag

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "antlr": "antlr4 src/asn1/ASN.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener"
+    "antlr": "antlr4 src/asn1/ASN_3gpp.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener && node dev/antlrToJs dist/asn1/ASN_3gppLexer.js",
+    "grammar": "download https://raw.githubusercontent.com/antlr/grammars-v4/master/asn_3gpp/ASN_3gpp.g4 > src/asn1/ASN_3gpp.g4"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "@types/loglevel": "^1.5.4",
     "@types/node": "^11.13.15",
     "@types/yargs": "^13.0.0",
+    "download-cli": "^1.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
     "typedoc": "^0.14.2",
