--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@types/antlr4": "^4.7.0",
     "@types/cheerio": "^0.22.11",
     "@types/ftp": "^0.3.29",
+    "@types/js-combinatorics": "^0.5.31",
     "@types/loglevel": "^1.5.4",
     "@types/node": "^11.13.15",
     "@types/yargs": "^13.0.0",
     "download-cli": "^1.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
-    "typedoc": "^0.14.2",
+    "typedoc": "^0.15.0",
     "typedoc-plugin-nojekyll": "^1.0.1"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "cheerio": "^1.0.0-rc.3",
     "excel4node": "^1.7.1",
     "ftp": "^0.3.10",
+    "js-combinatorics": "^0.5.4",
     "loglevel": "^1.6.3",
     "node-ical": "^0.9.2",
     "yargs": "^13.2.4"
