--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cheerio": "^0.22.11",
     "@types/ftp": "^0.3.29",
     "@types/js-combinatorics": "^0.5.31",
+    "@types/lodash": "^4.14.136",
     "@types/loglevel": "^1.5.4",
     "@types/node": "^11.13.15",
     "@types/yargs": "^13.0.0",
