--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/loglevel": "^1.5.4",
     "@types/node": "^11.13.15",
     "@types/yargs": "^13.0.0",
+    "antlr4ts-cli": "^0.5.0-alpha.3",
     "download-cli": "^1.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "antlr4": "^4.7.2",
+    "antlr4ts": "^0.5.0-alpha.3",
     "cheerio": "^1.0.0-rc.3",
     "excel4node": "^1.7.1",
     "ftp": "^0.3.10",
