Replace getCharPositionInLine() to this.charPositionInLine

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "antlr": "antlr4 src/asn1/ASN_3gpp.g4 -o dist/asn1 -Dlanguage=JavaScript -visitor -no-listener && node dev/antlrToJs dist/asn1/ASN_3gppLexer.js",
-    "ant4ts": "antlr4ts src/asn1/ASN_3gpp.g4 -o src/asn1 -visitor -no-listener",
+    "ant4ts": "antlr4ts src/asn1/ASN_3gpp.g4 -o src/asn1 -visitor -no-listener && node dev/antlr4TsToJs src/asn1/ASN_3gppLexer.ts",
     "grammar": "download https://raw.githubusercontent.com/gsongsong/grammars-v4/asn-3gpp/asn_3gpp/ASN_3gpp.g4 > src/asn1/ASN_3gpp.g4"
   },
   "repository": {
