Use ES6 target due to Lexer super constructor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
+    "module": "commonjs",
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
