--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "dist",
     "declaration": true,
     "newLine": "LF",
+    "noUnusedLocals": true,
   },
   "typedocOptions": {
     "exclude": [
