--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "download-cli": "^1.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
+    "mocha": "^7.0.1",
     "typedoc": "^0.15.0",
     "typedoc-plugin-nojekyll": "^1.0.1"
   },
