--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@types/js-combinatorics": "^0.5.31",
     "@types/lodash": "^4.14.138",
     "@types/loglevel": "^1.6.3",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^11.13.20",
     "@types/yargs": "^13.0.2",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "download-cli": "^1.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.2.1",
+    "mocha": "^7.0.1",
     "typedoc": "^0.15.0",
     "typedoc-plugin-nojekyll": "^1.0.1"
   },
