Set noUnusedLocals and remove the unused

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
+    "noUnusedLocals": true,
     "newLine": "LF",
   },
   "typedocOptions": {
