--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "devDependencies": {
     "@types/antlr4": "^4.7.0",
     "@types/cheerio": "^0.22.13",
+    "@types/diff": "^4.0.2",
     "@types/ftp": "^0.3.29",
     "@types/js-combinatorics": "^0.5.31",
     "@types/lodash": "^4.14.138",
     "@types/loglevel": "^1.6.3",
     "@types/mocha": "^7.0.1",
     "@types/node": "^11.13.20",
+    "@types/pug": "^2.0.4",
     "@types/yargs": "^13.0.2",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "download-cli": "^1.1.1",
@@ -48,11 +50,14 @@
     "antlr4": "^4.7.2",
     "antlr4ts": "^0.5.0-alpha.3",
     "cheerio": "^1.0.0-rc.3",
+    "diff": "^4.0.2",
+    "diff2html": "^3.1.6",
     "excel4node": "^1.7.2",
     "ftp": "^0.3.10",
     "js-combinatorics": "^0.5.4",
     "loglevel": "^1.6.4",
     "node-ical": "^0.9.2",
+    "pug": "^2.0.4",
     "yargs": "^13.3.0"
   }
 }
