--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "extract": "node  dist/asn1/extractor",
     "prettier": "npx prettier@2.0.5 src --write",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-parser": "mocha dist/asn1/parser",
+    "test-parser": "mocha --enable-source-maps dist/asn1/parser",
+    "test-parser-36331": "mocha --enable-source-maps dist/asn1/parser --grep 36331 ",
+    "test-parser-38331": "mocha --enable-source-maps dist/asn1/parser --grep 38331",
     "typedoc": "typedoc --out doc src",
     "//": "Why a specific version of typedoc is required:",
     "//": "https://stackoverflow.com/a/60796968/3278063",
