--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "antlr4ts-help": "antlr4ts",
     "extract": "node  dist/asn1/extractor",
     "prettier": "npx prettier@2.0.5 src --write",
-    "test-parser": "mocha --enable-source-maps dist/asn1/parser --grep parse_all",
-    "test-parser-36331": "mocha --enable-source-maps dist/asn1/parser --grep parse_36331",
-    "test-parser-38331": "mocha --enable-source-maps dist/asn1/parser --grep parse_38331",
+    "test-expander": "mocha --enable-source-maps dist/asn1/expander --grep expand_all",
+    "test-expander-36331": "mocha --enable-source-maps dist/asn1/expander --grep expand_36331",
+    "test-expander-38331": "mocha --enable-source-maps dist/asn1/expander --grep expand_38331",
     "test-formatter": "mocha --enable-source-maps dist/asn1/formatter --grep format_all",
     "test-formatter-36331": "mocha --enable-source-maps dist/asn1/formatter --grep format_36331",
     "test-formatter-38331": "mocha --enable-source-maps dist/asn1/formatter --grep format_38331",
+    "test-parser": "mocha --enable-source-maps dist/asn1/parser --grep parse_all",
+    "test-parser-36331": "mocha --enable-source-maps dist/asn1/parser --grep parse_36331",
+    "test-parser-38331": "mocha --enable-source-maps dist/asn1/parser --grep parse_38331",
     "test-logger": "mocha --enable-source-maps dist/logger --grep logger_all",
     "typedoc": "typedoc --out doc src",
     "typedoc-install": "npm i -g typedoc@0.16.11",
