Add trim options to asn1.extractor

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test-expander": "mocha --enable-source-maps dist/asn1/expander --grep expand_all",
     "test-expander-36331": "mocha --enable-source-maps dist/asn1/expander --grep expand_36331",
     "test-expander-38331": "mocha --enable-source-maps dist/asn1/expander --grep expand_38331",
+    "test-extractor": "mocha --enable-source-maps dist/asn1/extractor --grep extract_all",
+    "test-extractor-normal": "mocha --enable-source-maps dist/asn1/extractor --grep extract_normal_token",
+    "test-extractor-old-ran3": "mocha --enable-source-maps dist/asn1/extractor --grep extract_old_ran3_token",
     "test-formatter": "mocha --enable-source-maps dist/asn1/formatter --grep format_all",
     "test-formatter-36331": "mocha --enable-source-maps dist/asn1/formatter --grep format_36331",
     "test-formatter-38331": "mocha --enable-source-maps dist/asn1/formatter --grep format_38331",
