Support formatting ASN.1 in text

--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
     "antlr4ts-help": "antlr4ts",
     "extract": "node  dist/asn1/extractor",
     "prettier": "npx prettier@2.0.5 src --write",
-    "test-expander": "mocha --enable-source-maps dist/asn1/expander --grep expand_all",
-    "test-expander-36331": "mocha --enable-source-maps dist/asn1/expander --grep expand_36331",
-    "test-expander-38331": "mocha --enable-source-maps dist/asn1/expander --grep expand_38331",
-    "test-extractor": "mocha --enable-source-maps dist/asn1/extractor --grep extract_all",
-    "test-extractor-normal": "mocha --enable-source-maps dist/asn1/extractor --grep extract_normal_token",
-    "test-extractor-old-ran3": "mocha --enable-source-maps dist/asn1/extractor --grep extract_old_ran3_token",
-    "test-formatter": "mocha --enable-source-maps dist/asn1/formatter --grep format_all",
-    "test-formatter-36331": "mocha --enable-source-maps dist/asn1/formatter --grep format_36331",
-    "test-formatter-38331": "mocha --enable-source-maps dist/asn1/formatter --grep format_38331",
-    "test-parser": "mocha --enable-source-maps dist/asn1/parser --grep parse_all",
-    "test-parser-36331": "mocha --enable-source-maps dist/asn1/parser --grep parse_36331",
-    "test-parser-36413": "mocha --enable-source-maps dist/asn1/parser --grep parse_36413",
-    "test-parser-36423": "mocha --enable-source-maps dist/asn1/parser --grep parse_36423",
-    "test-parser-38331": "mocha --enable-source-maps dist/asn1/parser --grep parse_38331",
-    "test-parser-38413": "mocha --enable-source-maps dist/asn1/parser --grep parse_38413",
-    "test-parser-38423": "mocha --enable-source-maps dist/asn1/parser --grep parse_38423",
-    "test-parser-38463": "mocha --enable-source-maps dist/asn1/parser --grep parse_38463",
-    "test-parser-38473": "mocha --enable-source-maps dist/asn1/parser --grep parse_38473",
-    "test-logger": "mocha --enable-source-maps dist/logger --grep logger_all",
+    "test-expander": "mocha --enable-source-maps dist/asn1/test_expander --grep expand_all",
+    "test-expander-36331": "mocha --enable-source-maps dist/asn1/test_expander --grep expand_36331",
+    "test-expander-38331": "mocha --enable-source-maps dist/asn1/test_expander --grep expand_38331",
+    "test-extractor": "mocha --enable-source-maps dist/asn1/test_extractor --grep extract_all",
+    "test-extractor-normal": "mocha --enable-source-maps dist/asn1/test_extractor --grep extract_normal_token",
+    "test-extractor-old-ran3": "mocha --enable-source-maps dist/asn1/test_extractor --grep extract_old_ran3_token",
+    "test-formatter": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_all",
+    "test-formatter-36331": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_36331",
+    "test-formatter-36413": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_36413",
+    "test-formatter-36423": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_36423",
+    "test-formatter-38331": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_38331",
+    "test-formatter-38413": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_38413",
+    "test-formatter-38423": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_38423",
+    "test-formatter-38463": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_38463",
+    "test-formatter-38473": "mocha --enable-source-maps dist/asn1/test_formatter --grep format_38473",
+    "test-parser": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_all",
+    "test-parser-36331": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_36331",
+    "test-parser-36413": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_36413",
+    "test-parser-36423": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_36423",
+    "test-parser-38331": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_38331",
+    "test-parser-38413": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_38413",
+    "test-parser-38423": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_38423",
+    "test-parser-38463": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_38463",
+    "test-parser-38473": "mocha --enable-source-maps dist/asn1/test_parser --grep parse_38473",
+    "test-logger": "mocha --enable-source-maps dist/test_logger --grep logger_all",
     "typedoc": "typedoc --out doc src",
     "typedoc-install": "npm i -g typedoc@0.16.11",
     "// Why a specific version of typedoc is required": "https://stackoverflow.com/a/60796968/3278063",
