Add Constraint class

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "antlr4ts": "antlr4ts -visitor -no-listener src/asn1/grammar/ASN_3gpp.g4 -o src/asn1/grammar",
     "antlr4ts-help": "antlr4ts",
+    "class": "node dist/asn1/classes",
     "extract": "node  dist/asn1/extractor",
     "prettier": "npx prettier@2.0.5 src --write",
     "test-expander": "mocha --enable-source-maps dist/asn1/test_expander --grep expand_all",
