--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "homepage": "https://github.com/gsongsong/3gpp#readme",
   "devDependencies": {
+    "@types/cheerio": "^0.22.21",
     "@types/diff": "^4.0.2",
     "@types/hogan.js": "^3.0.0",
     "@types/lodash": "^4.14.158",
@@ -91,6 +92,7 @@
   },
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.3",
+    "cheerio": "^1.0.0-rc.3",
     "diff": "^4.0.2",
     "diff2html": "^3.1.11",
     "exceljs": "^4.1.1",
