Add RAN3 npm/yarn script

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "class": "node --enable-source-maps dist/asn1/classes",
     "extract": "node --enable-source-maps dist/asn1/extractor",
     "prettier": "npx prettier@2.0.5 src --write",
+    "ran3": "node --enable-source-maps dist/ran3",
     "test-diff": "mocha --enable-source-maps dist/asn1/test_diff --grep diff_all",
     "test-diff-render": "mocha --enable-source-maps dist/asn1/test_diff --grep diff_render",
     "test-expander": "mocha --enable-source-maps dist/asn1/test_expander --grep expand_all",
