--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
   },
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4",
+    "basic-ftp": "^4.6.6",
     "cheerio": "^1.0.0-rc.6",
+    "commander": "^8.2.0",
     "diff": "^4.0.2",
     "diff2html": "^3.1.11",
     "exceljs": "^4.1.1",
