--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/node": "^14.0.13",
     "@types/pug": "^2.0.4",
     "@types/readline-sync": "^1.4.4",
+    "@types/word-extractor": "^1.0.1",
     "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
@@ -115,6 +116,7 @@
     "readline-sync": "^1.4.10",
     "unimpl": "^1.2.4",
     "winston": "^3.3.3",
+    "word-extractor": "^1.0.4",
     "yargs": "^15.4.1"
   }
 }
